css rel to views

--- a/ui/index.html
+++ b/ui/index.html
@@ -106,7 +106,7 @@
     </script>
   </div>
 
-  <link href="./style/app.css" rel="stylesheet" />
-  <script type="module" src="main.js"></script>
+  <link href="main.css" rel="stylesheet" />
+  <script src="main.js" type="module"></script>
 </body>
 </html>
