--- a/ui/index.html
+++ b/ui/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>pgBlackboard</title>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
   <style>
     /* http://tobiasahlin.com/spinkit/ */
