--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   <link href="main.css" rel="stylesheet" />
   <script src="main.js" type="module"></script>
+  <script>/* fix fuoc */</script>
 </head>
 <body>
   <div style="
