--- a/ui/index.html
+++ b/ui/index.html
@@ -13,9 +13,12 @@
   <div style="
     position: fixed;
     inset: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    padding: 5em 1em;
+    font-family: sans-serif;
+    font-size: large;
+    color: #888;
+    background-color: #222;
     ">loading...</div>
 </body>
 </html>
