--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
   <title>pgBlackboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-  <link href="main.css" rel="stylesheet" />
-  <script src="main.js" type="module"></script>
+  <link href="ui.css" rel="stylesheet" />
+  <script src="ui.js" type="module"></script>
 </head>
 <body>
   <div style="
